--- a/Blog/Blog/Resources/BlogResources.resx
+++ b/Blog/Blog/Resources/BlogResources.resx
@@ -120,6 +120,9 @@
   <data name="Archive" xml:space="preserve">
     <value>Archive</value>
   </data>
+  <data name="BlogName" xml:space="preserve">
+    <value>Lifelog</value>
+  </data>
   <data name="Contact" xml:space="preserve">
     <value>Contact</value>
   </data>
