--- a/Blog/Blog/Resources/BlogResources.resx
+++ b/Blog/Blog/Resources/BlogResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AllPosts" xml:space="preserve">
+    <value>Posts</value>
+  </data>
   <data name="Archive" xml:space="preserve">
     <value>Archive</value>
   </data>
@@ -125,6 +128,9 @@
   </data>
   <data name="Contact" xml:space="preserve">
     <value>Contact</value>
+  </data>
+  <data name="Create" xml:space="preserve">
+    <value>Create a post</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Dashboard</value>
